# MANIFOLD---Rust

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  ESCALATION_FP1.md  FLUID_SIM_AUDIT.md  _typos.toml  clippy.toml  deny.toml  libstdin.rlib  rust-analyzer.toml
crates/manifold-app/: Cargo.toml
crates/manifold-app/assets/: control-faces-calm-mockup.html  control-faces-inspector-mockup.html  control-faces-mockup.html  control-faces-modulation-mockup.html  timeline-mockup.html
crates/manifold-app/src/: alerts.rs  app.rs  app_lifecycle.rs  app_render.rs  audio_layer_curves.rs  audio_mod_runtime.rs  audio_waveform_cache.rs  autosave.rs  bake_black_hole.rs  blender_import.rs  breadcrumb.rs  bug035_verify.rs  bug037_verify.rs  bug219_verify.rs  clip_atlas.rs  clip_filmstrip.rs  clip_thumb_cache.rs  content_command.rs  content_commands.rs  content_export.rs  content_pipeline.rs  content_state.rs  content_thread.rs  dialog_path_memory.rs  display_link.rs  drag_hover.rs  drag_interpose.rs  editing_host.rs  editor_bridge.rs  editor_frame.rs  editor_input.rs  edr_surface.rs  frame_timer.rs  graph_canvas.rs  graph_dump.rs  headless_harness.rs  import_responsiveness_verify.rs  import_worker.rs  import_worker_drain_verify.rs  input_handler.rs  (+29 more)
crates/manifold-app/tests/: garden_preset_round_trip.rs  godfile_regrowth.rs  legacy_param_id_resolution.rs  project_local_preset_reload.rs  stock_preset_round_trip.rs  tree_render_call_sites.rs  user_param_bindings_e2e.rs
crates/manifold-audio/: Cargo.toml
crates/manifold-audio/examples/: causal_events.rs  hpss_proto.rs  mod_harness.rs
crates/manifold-audio/src/: analysis.rs  capture.rs  directory.rs  lib.rs  permission.rs
crates/manifold-core/: Cargo.toml
crates/manifold-core/examples/: apply_grouping.rs
crates/manifold-core/src/: ableton_mapping.rs  audio_clip_detection.rs  audio_features.rs  audio_mod.rs  audio_setup.rs  audio_trigger.rs  clip.rs  color.rs  effect_category_registry.rs  effect_definition_registry.rs  effect_graph_def.rs  effect_registration.rs  effect_type_id.rs  effect_type_registry.rs  effects.rs  flatten.rs  generator.rs  generator_definition_registry.rs  generator_metadata_submissions.rs  generator_registration.rs  generator_type_id.rs  generator_type_registry.rs  graph_host.rs  graph_target.rs  group_edit.rs  id.rs  layer.rs  lib.rs  macro_bank.rs  marker.rs  math.rs  midi.rs  mri.rs  params.rs  percussion.rs  percussion_analysis.rs  percussion_binding.rs  percussion_settings.rs  preset_def.rs  preset_definition_registry.rs  (+16 more)
crates/manifold-core/tests/: bug080_project_deserialize_single_door.rs  docs_index_sync.rs  generator_param_counts.rs  grouping_equivalence.rs
crates/manifold-foundation/: Cargo.toml
crates/manifold-foundation/src/: feature_flags.rs  hash.rs  id.rs  lib.rs  units.rs
crates/manifold-gpu/: Cargo.toml
crates/manifold-gpu/src/: lib.rs  shader_common.rs  types.rs
crates/manifold-io/: Cargo.toml
crates/manifold-io/src/: archive.rs  lib.rs  loader.rs  manifest.rs  migrate.rs  path_resolver.rs  preset_file.rs  saver.rs  venue_file.rs
crates/manifold-io/tests/: forward_version_guard.rs  history_snapshots.rs  load_project.rs  load_report.rs
crates/manifold-led/: Cargo.toml
crates/manifold-led/src/: artnet.rs  blit.rs  controller.rs  dmx.rs  lib.rs  readback.rs  types.rs
crates/manifold-media/: Cargo.toml  build.rs
crates/manifold-media/native/: ColorTransferFunctions.h  MetalEncoderPlugin.m  MetalVideoDecoderPlugin.m
crates/manifold-media/src/: audio_muxer.rs  decode_scheduler.rs  decoder.rs  decoder_ffi.rs  export_config.rs  export_session.rs  frame_rate.rs  image_renderer.rs  lib.rs  metadata.rs  metal_encoder.rs  metal_ffi.rs  still_exporter.rs  video_renderer.rs
crates/manifold-playback/: Cargo.toml  build.rs
crates/manifold-playback/native/: signalsmith_stretch.cpp
crates/manifold-playback/src/: ableton_bridge.rs  active_window.rs  audio_decoder.rs  audio_layer_playback.rs  audio_mixdown.rs  audio_sync.rs  audio_warp.rs  automation.rs  clip_launcher.rs  engine.rs  lib.rs  link_sync.rs  live_clip_manager.rs  live_trigger.rs  midi_clock_sync.rs  midi_import.rs  midi_input.rs  midi_parser.rs  modulation.rs  osc_param_router.rs  osc_receiver.rs  osc_registry.rs  osc_sender.rs  osc_sync.rs  percussion_alignment.rs  percussion_backend.rs  percussion_commands.rs  percussion_import.rs  percussion_orchestrator.rs  percussion_parser.rs  percussion_planner.rs  percussion_progress_parser.rs  process_runner.rs  renderer.rs  scheduler.rs  session_state.rs  stem_audio.rs  sync.rs  sync_source.rs  tempo_recorder.rs  (+3 more)
crates/manifold-playback/tests/: ableton_transport_sync.rs  engine_tick.rs  live_clip.rs  osc_timecode.rs  param_step_clip_edge.rs  project_boundary_release.rs  session_mode.rs  sync_engine_integration.rs
crates/manifold-recording/: Cargo.toml  build.rs
crates/manifold-recording/native/: LiveRecordingPlugin.m
crates/manifold-recording/src/: config.rs  ffi.rs  format_converter.rs  lib.rs  proofs.rs  recording_thread.rs  session.rs  texture_pool.rs
crates/manifold-recording/tests/: recording_proofs.rs
crates/manifold-renderer/: Cargo.toml  build.rs
crates/manifold-renderer/src/: automation_lane_draw.rs  background_worker.rs  blit.rs  chain_dispatch.rs  clip_content_gpu.rs  clip_draw.rs  clip_thumb_gpu.rs  compositor.rs  effect.rs  effect_chain.rs  effect_chain_graph.rs  effect_registry.rs  fsr1.rs  gpu.rs  (+38 more)
crates/manifold-spectral/: Cargo.toml
crates/manifold-ui/: Cargo.toml
plugins/: Cargo.toml
plugins/manifold-analyzer-cli/: Cargo.toml
plugins/manifold-analyzer-dsp/: Cargo.toml
plugins/manifold-analyzer-gui/: Cargo.toml
plugins/manifold-analyzer-plugin/: Cargo.toml
plugins/scripts/: build-analyzer-vst-plugin.sh
plugins/xtask/: Cargo.toml
tools/rt_prototype/: .gitignore  BRIEF.md  Cargo.toml
tv-led-mirror/: Cargo.toml  Info.plist  launch.sh  run.sh
tv-led-mirror/scripts/: bundle.sh  create-signing-cert.sh
tv-led-mirror/src/: capture.rs  ffi.rs  gui.rs  hue.rs  main.rs  menu_bar.rs  reload.rs  shutdown.rs  slicer.rs
(+2401 files in other folders)
