[workspace]
resolver = "2"
members = [
    "crates/manifold-core",
    "crates/manifold-ui",
    "crates/manifold-playback",
    "crates/manifold-editing",
    "crates/manifold-io",
    "crates/manifold-renderer",
    "crates/manifold-native",
    "crates/manifold-app",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
wgpu = "28"
winit = "0.30"
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
kira = "0.9"
symphonia = { version = "0.5", features = ["all"] }

# Optimise audio decoding even in debug builds — pure-Rust symphonia is 10-50x
# slower without optimisation, and kira uses it internally for decoding.
[profile.dev.package.symphonia-core]
opt-level = 2
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 2
[profile.dev.package.symphonia-bundle-flac]
opt-level = 2
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 2
[profile.dev.package.symphonia-format-wav]
opt-level = 2
[profile.dev.package.symphonia-format-ogg]
opt-level = 2
[profile.dev.package.symphonia-codec-aac]
opt-level = 2
