[workspace]
resolver = "2"
members = [
    "crates/manifold-foundation",
    "crates/manifold-core",
    "crates/manifold-ui",
    "crates/manifold-playback",
    "crates/manifold-editing",
    "crates/manifold-io",
    "crates/manifold-renderer",
    "crates/manifold-native",
    "crates/manifold-profiler",
    "crates/manifold-media",
    "crates/manifold-led",
    "crates/manifold-gpu",
    "crates/manifold-audio",
    "crates/manifold-spectral",
    "crates/manifold-recording",
    "crates/manifold-app",
]
# `cargo run` and bare `cargo test` at workspace root resolve to
# manifold-app — restores the pre-`check-presets`-binary behavior
# where `cargo run --release` launches the app without --bin.
# `cargo test --workspace` and `cargo test -p <crate>` are unaffected.
default-members = ["crates/manifold-app"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy", "profiling"))'] }

[workspace.lints.clippy]
# undocumented_unsafe_blocks: tracked for future adoption (137 existing blocks need comments)
# cast_possible_truncation, cast_sign_loss, cast_precision_loss: tracked for numeric safety

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
winit = "0.30"
log = "0.4"
env_logger = "0.11"
kira = "0.9"
symphonia = { version = "0.5", features = ["all"] }
ahash = "0.8"
parking_lot = "0.12"
arc-swap = "1"

# Optimise audio decoding even in debug builds — pure-Rust symphonia is 10-50x
# slower without optimisation, and kira uses it internally for decoding.
[profile.dev.package.symphonia-core]
opt-level = 2
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 2
[profile.dev.package.symphonia-bundle-flac]
opt-level = 2
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 2
[profile.dev.package.symphonia-format-riff]
opt-level = 2
[profile.dev.package.symphonia-format-ogg]
opt-level = 2
[profile.dev.package.symphonia-codec-aac]
opt-level = 2

# Optimise image decode + resize even in debug builds. The pure-Rust `image`
# stack (decode codecs + imageops resize) runs 50-100x slower without
# optimisation — a large still took multiple seconds to fit in debug, stalling
# image-clip first paint. Same rationale as the symphonia block above.
[profile.dev.package.image]
opt-level = 2
[profile.dev.package.png]
opt-level = 2
[profile.dev.package.fdeflate]
opt-level = 2
[profile.dev.package.miniz_oxide]
opt-level = 2
[profile.dev.package.flate2]
opt-level = 2
[profile.dev.package.jpeg-decoder]
opt-level = 2
[profile.dev.package.zune-jpeg]
opt-level = 2
[profile.dev.package.zune-core]
opt-level = 2
[profile.dev.package.image-webp]
opt-level = 2
[profile.dev.package.gif]
opt-level = 2
[profile.dev.package.weezl]
opt-level = 2
[profile.dev.package.color_quant]
opt-level = 2
[profile.dev.package.tiff]
opt-level = 2

# Dev profile — tuned for fast edit-rebuild-relink iteration.
# manifold-app links every crate, so link time dominates incremental builds.
[profile.dev]
# Keep file:line in backtraces but skip full variable/type debuginfo —
# a big cut to both codegen and link time across the 14-crate workspace.
debug = "line-tables-only"
# On macOS, leave debuginfo in the .o files instead of running dsymutil to
# pack a .dSYM on every link. Removes the slowest part of the link step.
split-debuginfo = "unpacked"

# Release profile — optimise for runtime performance and binary size.
[profile.release]
# lto = "fat"
# 16 codegen units instead of 1: parallel codegen for a far faster release
# build at ~1-2% runtime cost. Re-set to 1 only for a final shipped build.
codegen-units = 16
strip = "symbols"
panic = "abort"
split-debuginfo = "unpacked"
