[workspace]
resolver = "2"
members = ["."]

[package]
name = "tv-led-mirror"
version = "0.1.0"
edition = "2024"
publish = false
description = "Standalone tool: mirror a macOS display to ArtNet LEDs via Manifold's edge-extend pipeline."

[[bin]]
name = "tv-led-mirror"
path = "src/main.rs"

[dependencies]
# Manifold crates from the parent project — same GPU + LED pipeline as the app.
manifold-gpu = { path = "../crates/manifold-gpu" }
manifold-led = { path = "../crates/manifold-led" }

# CLI parsing.
clap = { version = "4", features = ["derive"] }

# CGDisplayStream's frame callback is a block; matches manifold-gpu's block2 0.6.
block2 = "0.6"

# Ctrl+C / SIGTERM handler so we send a final blackout instead of stranding
# the LEDs. `termination` feature catches SIGTERM in addition to SIGINT.
ctrlc = { version = "3", features = ["termination"] }

# Logging — same crates the rest of the project uses.
log = "0.4"
env_logger = "0.11"

# Threading primitive for the frame-callback shared state.
parking_lot = "0.12"

# Pod/Zeroable for the slicer's uniform struct.
bytemuck = { version = "1", features = ["derive"] }

# AppKit menu-bar status item with a Quit action so the app can be killed
# without going back to the terminal. Versions match the rest of the project.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSButton",
    "NSControl",
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSImage",
] }
# ScreenCaptureKit + CoreMedia/CoreVideo for HDR-aware capture. SCK replaces
# CGDisplayStream so we can request 16-bit float pixel format,
# extendedLinearSRGB color space, and SCCaptureDynamicRangeHDR — preserving
# HDR highlights and wide-gamut color that CGDisplayStream's 8-bit SDR path
# tone-maps away before we see a single pixel.
objc2-screen-capture-kit = { version = "0.3", features = [
    "SCStream",
    "SCShareableContent",
    "SCError",
    "block2",
    "dispatch2",
    "objc2-core-media",
    "objc2-core-graphics",
    "objc2-core-foundation",
] }
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer", "CMTime"] }
objc2-core-video = { version = "0.3", features = ["CVPixelBuffer", "CVImageBuffer", "CVBuffer"] }
dispatch2 = "0.3"

# atexit hook for sending a final LED blackout when the user picks Quit
# (NSApplication.terminate calls exit() directly — our SIGINT/SIGTERM path
# doesn't fire there).
libc = "0.2"

[dev-dependencies]
# Validates the slicer WGSL parses at test time, mirroring manifold-led's pattern.
naga = { version = "28", features = ["wgsl-in"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
