[package]
name = "manifold-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "manifold"
path = "src/main.rs"

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-editing = { path = "../manifold-editing" }
manifold-ui = { path = "../manifold-ui" }
manifold-playback = { path = "../manifold-playback" }
manifold-renderer = { path = "../manifold-renderer" }
manifold-io = { path = "../manifold-io" }
manifold-media = { path = "../manifold-media" }
manifold-gpu = { path = "../manifold-gpu" }
manifold-led = { path = "../manifold-led" }
manifold-audio = { path = "../manifold-audio" }
manifold-recording = { path = "../manifold-recording" }
winit = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = "0.5"
mimalloc = "0.1"
libc = "0.2"
parking_lot = { workspace = true }
arboard = "3"
manifold-profiler = { path = "../manifold-profiler", optional = true }

# macOS platform dependencies
[target.'cfg(target_os = "macos")'.dependencies]
io-surface = "0.16"
objc = "0.2"
core-foundation = "0.10"
raw-window-handle = "0.6"

[features]
profiling = ["dep:manifold-profiler"]

[lints]
workspace = true
