[package]
name = "manifold-app"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "manifold"
path = "src/main.rs"

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-editing = { path = "../manifold-editing" }
manifold-ui = { path = "../manifold-ui" }
manifold-playback = { path = "../manifold-playback" }
manifold-renderer = { path = "../manifold-renderer" }
manifold-io = { path = "../manifold-io" }
manifold-media = { path = "../manifold-media" }
manifold-gpu = { path = "../manifold-gpu" }
manifold-led = { path = "../manifold-led" }
manifold-audio = { path = "../manifold-audio" }
# `gpu` feature: the app renders the spectrogram waterfall, so it needs the GPU
# renderer (the worker, via manifold-audio, uses the CPU CQT only).
manifold-spectral = { path = "../manifold-spectral", features = ["gpu"] }
manifold-recording = { path = "../manifold-recording" }
winit = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = "0.5"
ahash = { workspace = true }
# `UIRoot::closed_overlays` (OVERLAY_SESSIONS_AND_PICKER_DESIGN.md §3) — a
# handful of overlay ids per frame at most, so a small inline buffer avoids a
# heap alloc on the common empty/one-close case. Already resolved in
# Cargo.lock via a transitive dep.
smallvec = "1"
mimalloc = "0.1"
libc = "0.2"
parking_lot = { workspace = true }
arboard = "3"
# Graph output dump (visual inspection): 16-bit PNG encode + f16 decode.
png = "0.18"
half = "2"
manifold-profiler = { path = "../manifold-profiler", optional = true }
# Headless UI snapshot harness (feature `ui-snapshot`): PNG encode of the
# rendered tree. Optional so it never enters the shipping binary.
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
muda = "0.19.3"

# macOS platform dependencies
[target.'cfg(target_os = "macos")'.dependencies]
io-surface = "0.16"
core-foundation = "0.10"
raw-window-handle = "0.6"
objc2 = "0.6"
# "objc2-core-foundation": pulls in NSPoint/NSRect (CGPoint/CGRect aliases),
# needed by drag_interpose.rs to convert draggingLocation into cursor_pos's
# logical top-left convention. Already in Cargo.lock (transitive via winit).
objc2-foundation = { version = "0.3", features = ["NSString", "NSNotification", "NSURL", "NSArray", "objc2-core-foundation"] }
# P3 (docs/TIMELINE_INGEST_DESIGN.md §4): general-pasteboard access for the
# Finder-paste arbitration. macos_pasteboard.rs is the sole module allowed
# to name these types.
objc2-app-kit = { version = "0.3", features = [
    "NSPasteboard",
    "NSPasteboardItem",
] }

[features]
profiling = ["dep:manifold-profiler"]
ui-snapshot = ["dep:image"]
# P3 release-journey harness (docs/OFFLINE_AUDIO_REACTIVE_EXPORT_DESIGN.md):
# headless end-to-end export proofs (audio-reactive + LFO + round-trip).
# Deliberate-run only, like gpu-proofs — GPU + video encode, minutes-long.
# `dep:image` for PNG luma decode, same optional dep `ui-snapshot` uses.
journey-proofs = ["dep:image"]
# `cargo xtask perf-soak` (docs/PERF_BUDGET_GATE_DESIGN.md P1): headless
# frame-budget soak of a real project. Needs `profiling` for
# `manifold-profiler`'s per-frame section-timing collector (min/p50/p95/max +
# worst-frame breakdown come from its FrameRecord/SessionSummary, not a new
# timing framework).
perf-soak = ["profiling"]

[lints]
workspace = true
