[package]
name = "manifold-audio"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-core = { path = "../manifold-core" }
# CPU CQT for the spectrogram column producer. default-features=false keeps the
# GPU renderer (and manifold-gpu) out of this crate's standalone build.
manifold-spectral = { path = "../manifold-spectral", default-features = false }
log = { workspace = true }
cpal = "0.15"
ringbuf = "0.4"
rustfft = "6"

# macOS ScreenCaptureKit FFI (per-app audio capture) + CoreAudio device directory
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString", "NSArray", "NSObjCRuntime"] }
block2 = "0.6"
# CFString/CFArray handling for the CoreAudio device directory (channel names, UIDs).
core-foundation = "0.10"

[lints]
workspace = true
