[package]
name = "manifold-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-foundation = { path = "../manifold-foundation" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ahash = { workspace = true }
arc-swap = { workspace = true }
inventory = "0.3"

[lints]
workspace = true
