[package]
name = "manifold-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-foundation = { path = "../manifold-foundation" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
ahash = { workspace = true }
arc-swap = { workspace = true }
inventory = "0.3"
log = { workspace = true }

[features]
# Wall-clock ceiling micro-benchmarks (BUG-113/BUG-142): sensitive to CPU
# contention from nextest's parallel thread pool and whatever else is running
# on the machine, so they don't belong in the "safe to run freely, always
# green" default sweep. Off by default; opt in with `--features bench-timing`
# (same convention as manifold-renderer's `gpu-proofs`).
bench-timing = []

[lints]
workspace = true
