[package]
name = "manifold-gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
# WGSL parsing + validation + MSL output + SPIR-V output
naga = { version = "28", features = ["wgsl-in", "msl-out", "spv-out"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"

# SPIR-V optimization (wraps Google SPIRV-Tools C++)
spirv-tools = { version = "0.13", features = ["use-compiled-tools"] }
# SPIR-V → MSL compilation (wraps SPIRV-Cross C)
spirv-cross2 = { version = "0.4", default-features = false, features = ["msl"] }

# Native Metal backend
[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"

# objc2 ecosystem — typed Metal bindings (full migration, no `metal` crate).
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSError", "NSArray", "NSDictionary", "NSValue", "NSObjCRuntime"] }
objc2-metal = { version = "0.3", features = [
    "MTLDevice",
    "MTLTexture",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandQueue",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLRenderCommandEncoder",
    "MTLBlitCommandEncoder",
    "MTLComputePipeline",
    "MTLRenderPipeline",
    "MTLDepthStencil",
    "MTLRenderPass",
    "MTLSampler",
    "MTLBinaryArchive",
    "MTLPixelFormat",
    "MTLResource",
    "MTLLibrary",
    "MTLHeap",
    "MTLEvent",
    "MTLDrawable",
    "MTLCaptureManager",
    "MTLCaptureScope",
    "MTLTypes",
    "MTLVertexDescriptor",
    "MTLStageInputOutputDescriptor",
    "block2",
] }
objc2-metal-fx = { version = "0.3", features = [
    "MTLFXSpatialScaler",
] }
objc2-metal-performance-shaders = { version = "0.3", features = [
    "MPSKernel",
    "MPSCore",
    "MPSCoreTypes",
    "MPSImage",
    "MPSImageKernel",
    "MPSImageConvolution",
    "MPSImageResampling",
    "MPSImageMorphology",
    "MPSImageReduce",
    "MPSImageHistogram",
    "MPSImageThreshold",
    "MPSImageMedian",
    "MPSImageIntegral",
    "MPSImageTranspose",
    "MPSImageCopy",
    "MPSImageStatistics",
    "MPSImageMath",
    "MPSImageConversion",
    "MPSImageKeypoint",
    "MPSMatrix",
    "MPSMatrixRandom",
    "MPSMatrixTypes",
] }

[lints]
workspace = true
