[package]
name = "manifold-gpu"
version = "0.1.0"
edition = "2024"
publish = false

[features]
# Backend selection is explicit via feature flag. With no features, the crate
# uses the Metal backend on macOS and fails to link on other platforms (the
# intended error — MANIFOLD's primary build is Mac-native). Enabling `vulkan`
# switches to the Vulkan backend, on any platform. On macOS this routes
# through MoltenVK, which is a convenient way to validate the cross-platform
# path from the dev box without booting into Windows/Linux.
default = []
vulkan = ["dep:ash"]

[dependencies]
# WGSL parsing + validation + MSL output + SPIR-V output
naga = { version = "28", features = ["wgsl-in", "msl-out", "spv-out"] }
log = "0.4"

# SPIR-V optimization (wraps Google SPIRV-Tools C++)
spirv-tools = { version = "0.13", features = ["use-compiled-tools"] }
# SPIR-V → MSL compilation (wraps SPIRV-Cross C) — Metal backend only.
spirv-cross2 = { version = "0.7", default-features = false, features = ["msl"] }

# Vulkan loader bindings. Opt-in via the `vulkan` feature — pure FFI loader
# with no C deps, so enabling it costs essentially no compile time.
ash = { version = "0.38", optional = true }

# Native Metal backend
[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"

# objc2 ecosystem — typed Metal bindings (full migration, no `metal` crate).
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSError", "NSArray", "NSDictionary", "NSValue", "NSObjCRuntime"] }
objc2-metal = { version = "0.3", features = [
    "MTLDevice",
    "MTLTexture",
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandQueue",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLRenderCommandEncoder",
    "MTLBlitCommandEncoder",
    "MTLComputePipeline",
    "MTLRenderPipeline",
    "MTLDepthStencil",
    "MTLRenderPass",
    "MTLSampler",
    "MTLBinaryArchive",
    "MTLPixelFormat",
    "MTLResource",
    "MTLLibrary",
    "MTLHeap",
    "MTLEvent",
    "MTLDrawable",
    "MTLCaptureManager",
    "MTLCaptureScope",
    "MTLTypes",
    "MTLVertexDescriptor",
    "MTLStageInputOutputDescriptor",
    "MTLCounters",
    "MTLComputePass",
    "MTLBlitPass",
    "block2",
] }
objc2-metal-fx = { version = "0.3", features = [
    "MTLFXSpatialScaler",
    "MTLFXTemporalScaler",
] }
objc2-metal-performance-shaders = { version = "0.3", features = [
    "MPSKernel",
    "MPSCore",
    "MPSCoreTypes",
    "MPSImage",
    "MPSImageKernel",
    "MPSImageConvolution",
    "MPSImageResampling",
    "MPSImageMorphology",
    "MPSImageReduce",
    "MPSImageHistogram",
    "MPSImageThreshold",
    "MPSImageMedian",
    "MPSImageIntegral",
    "MPSImageTranspose",
    "MPSImageCopy",
    "MPSImageStatistics",
    "MPSImageMath",
    "MPSImageConversion",
    "MPSImageKeypoint",
    "MPSMatrix",
    "MPSMatrixRandom",
    "MPSMatrixTypes",
] }
# MPSGraph — Apple's graph-compiled compute ops. We use it only for the
# FFT primitive (`GpuFft`); everything else goes through our own compute
# kernels. Minimal feature set: Core + Memory (placeholder tensors) +
# FourierTransformOps + executable compile/encode + device + tensor data.
objc2-metal-performance-shaders-graph = { version = "0.3", features = [
    "MPSGraph",
    "MPSGraphCore",
    "MPSGraphDevice",
    "MPSGraphExecutable",
    "MPSGraphFourierTransformOps",
    "MPSGraphMemoryOps",
    "MPSGraphTensor",
    "MPSGraphTensorData",
] }

[lints]
workspace = true

# `ash` is gated behind the `vulkan` feature (see [features] above).
# cargo-machete doesn't enable optional features when scanning, so it
# correctly reports `ash` as unused under the default Metal config.
[package.metadata.cargo-machete]
ignored = ["ash"]
