[package]
name = "manifold-io"
version = "0.1.0"
edition = "2021"

[dependencies]
manifold-core = { path = "../manifold-core" }
serde = { workspace = true }
serde_json = { workspace = true }
zip = "2"
log = { workspace = true }
sha2 = "0.10"
flate2 = "1"
pathdiff = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
