[package]
name = "manifold-led"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
serde = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
naga = { version = "28", features = ["wgsl-in"] }
