[package]
name = "manifold-led"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-gpu = { path = "../manifold-gpu" }
bytemuck = { version = "1", features = ["derive"] }
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
naga = { version = "28", features = ["wgsl-in"] }

[lints]
workspace = true
