[package]
name = "manifold-media"
version = "0.1.0"
edition = "2024"

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-playback = { path = "../manifold-playback" }
log = { workspace = true }
ahash = { workspace = true }
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
manifold-gpu = { path = "../manifold-gpu" }

[build-dependencies]
cc = "1"
