[package]
name = "manifold-media"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-playback = { path = "../manifold-playback" }
log = { workspace = true }
ahash = { workspace = true }
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
manifold-gpu = { path = "../manifold-gpu" }
# Still-image decode for image clips (ImageRenderer). Lean format set —
# the common drop-on-timeline cases — rather than the full default set.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif", "tiff"] }

[build-dependencies]
cc = "1"

[lints]
workspace = true
