[package]
name = "manifold-playback"
version = "0.1.0"
edition = "2024"

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-editing = { path = "../manifold-editing" }
log = "0.4"
kira = { workspace = true }
symphonia = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
midir = "0.9"
rosc = "0.10"
rusty_link = "0.4"
parking_lot = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
manifold-io = { path = "../manifold-io" }
