[package]
name = "manifold-playback"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
manifold-core = { path = "../manifold-core" }
manifold-editing = { path = "../manifold-editing" }
log = "0.4"
kira = { workspace = true }
symphonia = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
midir = "0.9"
rosc = "0.10"
rusty_link = "0.4"
parking_lot = { workspace = true }
ahash = { workspace = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
manifold-io = { path = "../manifold-io" }
# Synthetic preset fixtures for the modulation characterization tests register
# via inventory (manifold-renderer, which submits the shipping presets, isn't
# linked into this test binary).
inventory = "0.3"

[lints]
workspace = true
